@@ -79,6 +79,10 @@ Changes on 1.2.0 since 1.1.0:
     and may be toggled on again by user if needed. The Dual Pane mode can
     be toggled either via the main menu or by pressing a key 'F3'.
 
+* Added icon size manipulations (increase, decrease, normalize size) into
+    View menu. New size will be remembered in config for the appropriate
+    type of icons.
+
 
 Changes on 1.1.0 since 1.0.1:
 
